// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute backed endpoint when ripcord true should return error 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "{"accountName":"ibta"}",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692716431529,
  },
}
`;

exports[`execute emgemx endpoint when ripcord true should return error 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1748007917250,
  },
}
`;

exports[`execute eurr endpoint when ripcord true should return error 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692617659477,
  },
}
`;

exports[`execute gift endpoint when ripcord true should return error 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1695648040048,
  },
}
`;

exports[`execute reserve endpoint when ripcord true should fail 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "{"client":"emgemx-tdfkf3","noErrorOnRipcord":false}",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordAsInt": 1,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1748007917250,
  },
}
`;

exports[`execute reserve endpoint when ripcord true should succeed with noErrorOnRipcord 1`] = `
{
  "data": {
    "result": "1000000",
    "ripcord": true,
    "ripcordAsInt": 1,
    "totalReserve": 1000000,
    "totalToken": 100000,
  },
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "{"client":"emgemx-tdfkf3","noErrorOnRipcord":true}",
    },
    "transportName": "default_single_transport",
  },
  "result": "1000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1748007917250,
  },
}
`;

exports[`execute stbt endpoint when ripcord true should return error 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1685710403604,
  },
}
`;

exports[`execute uranium endpoint when ripcord true should succeed 1`] = `
{
  "data": {
    "result": 1000000,
    "ripcord": true,
    "ripcordAsInt": 1,
  },
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "result": 1000000,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute usdr endpoint when ripcord true should return error 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Balances",
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "ripcord": true,
  "ripcordDetails": "Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692831653859,
  },
}
`;

exports[`execute wystc endpoint when ripcord true should succeed (ripcord is a data field, not an error) 1`] = `
{
  "data": {
    "result": "965051.85",
    "ripcord": true,
    "ripcordAsInt": 1,
    "ripcordDetails": [
      "Balances",
    ],
    "totalReserves": "965051.85",
    "totalSupply": "965051.85",
  },
  "meta": {
    "adapterName": "THE_NETWORK_FIRM",
    "metrics": {
      "feedId": "N/A",
    },
    "transportName": "default_single_transport",
  },
  "result": "965051.85",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1782820844620,
  },
}
`;
